// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportDefinition Construct(ReportDefinition):  Snapshot Test 1`] = `
{
  "Resources": {
    "NativeStack5E60C508": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::333333333333:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "TestBucket560B80BC": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "TestBucketPolicyBA12ED38": {
      "Properties": {
        "Bucket": {
          "Ref": "TestBucket560B80BC",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetBucketAcl",
                "s3:GetBucketPolicy",
              ],
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "TestBucket560B80BC",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "TestBucket560B80BC",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestReportDefinition9701AAC4": {
      "DependsOn": [
        "TestBucketPolicyBA12ED38",
      ],
      "Properties": {
        "Compression": "Parquet",
        "Format": "Parquet",
        "RefreshClosedReports": true,
        "ReportName": "Test",
        "ReportVersioning": "OVERWRITE_REPORT",
        "S3Bucket": {
          "Ref": "TestBucket560B80BC",
        },
        "S3Prefix": "test",
        "S3Region": "us-east-1",
        "TimeUnit": "DAILY",
      },
      "Type": "AWS::CUR::ReportDefinition",
    },
  },
}
`;

exports[`ReportDefinition Construct(ReportDefinition):  Snapshot Test 2`] = `
{
  "Resources": {
    "CustomCrossRegionReportDefinitionCustomResourceProviderHandler8E3AEE17": {
      "DependsOn": [
        "CustomCrossRegionReportDefinitionCustomResourceProviderRole845A4C3A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-333333333333-us-west-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomCrossRegionReportDefinitionCustomResourceProviderRole845A4C3A",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCrossRegionReportDefinitionCustomResourceProviderLogGroupC64E88D7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Fn::GetAtt": [
            "CustomKey1E6D0D07",
            "Arn",
          ],
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomCrossRegionReportDefinitionCustomResourceProviderHandler8E3AEE17",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomCrossRegionReportDefinitionCustomResourceProviderRole845A4C3A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "cur:DeleteReportDefinition",
                    "cur:ModifyReportDefinition",
                    "cur:PutReportDefinition",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomKey1E6D0D07": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::333333333333:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "TestBucket560B80BC": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "TestBucketPolicyBA12ED38": {
      "Properties": {
        "Bucket": {
          "Ref": "TestBucket560B80BC",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetBucketAcl",
                "s3:GetBucketPolicy",
              ],
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "TestBucket560B80BC",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "TestBucket560B80BC",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestReportDefinition9701AAC4": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomCrossRegionReportDefinitionCustomResourceProviderLogGroupC64E88D7",
        "TestBucketPolicyBA12ED38",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCrossRegionReportDefinitionCustomResourceProviderHandler8E3AEE17",
            "Arn",
          ],
        },
        "reportDefinition": {
          "AdditionalSchemaElements": [],
          "Compression": "Parquet",
          "Format": "Parquet",
          "RefreshClosedReports": true,
          "ReportName": "Test",
          "ReportVersioning": "OVERWRITE_REPORT",
          "S3Bucket": {
            "Ref": "TestBucket560B80BC",
          },
          "S3Prefix": "test",
          "S3Region": "us-west-1",
          "TimeUnit": "DAILY",
        },
      },
      "Type": "Custom::CrossRegionReportDefinition",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
